cbits/Bullet.h

void* btGImpactMeshShapePart_TrimeshPrimitiveManager_m_meshInterface_get(void *c); //attribute: ::btStridingMeshInterface * btGImpactMeshShapePart_TrimeshPrimitiveManager->m_meshInterface
void btGImpactMeshShapePart_TrimeshPrimitiveManager_m_scale_set(void *c,float* a); //attribute: ::btVector3 btGImpactMeshShapePart_TrimeshPrimitiveManager->m_scale
void btGImpactMeshShapePart_TrimeshPrimitiveManager_m_scale_get(void *c,float* a);
void btGImpactMeshShapePart_TrimeshPrimitiveManager_m_part_set(void *c,int a); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->m_part
int btGImpactMeshShapePart_TrimeshPrimitiveManager_m_part_get(void *c); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->m_part
void btGImpactMeshShapePart_TrimeshPrimitiveManager_m_lock_count_set(void *c,int a); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->m_lock_count
int btGImpactMeshShapePart_TrimeshPrimitiveManager_m_lock_count_get(void *c); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->m_lock_count
// attribute not supported: //attribute: unsigned char const * btGImpactMeshShapePart_TrimeshPrimitiveManager->vertexbase
void btGImpactMeshShapePart_TrimeshPrimitiveManager_numverts_set(void *c,int a); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->numverts
int btGImpactMeshShapePart_TrimeshPrimitiveManager_numverts_get(void *c); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->numverts
// attribute not supported: //attribute: ::PHY_ScalarType btGImpactMeshShapePart_TrimeshPrimitiveManager->type
void btGImpactMeshShapePart_TrimeshPrimitiveManager_stride_set(void *c,int a); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->stride
int btGImpactMeshShapePart_TrimeshPrimitiveManager_stride_get(void *c); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->stride
// attribute not supported: //attribute: unsigned char const * btGImpactMeshShapePart_TrimeshPrimitiveManager->indexbase
void btGImpactMeshShapePart_TrimeshPrimitiveManager_indexstride_set(void *c,int a); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->indexstride
int btGImpactMeshShapePart_TrimeshPrimitiveManager_indexstride_get(void *c); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->indexstride
void btGImpactMeshShapePart_TrimeshPrimitiveManager_numfaces_set(void *c,int a); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->numfaces
int btGImpactMeshShapePart_TrimeshPrimitiveManager_numfaces_get(void *c); //attribute: int btGImpactMeshShapePart_TrimeshPrimitiveManager->numfaces
// attribute not supported: //attribute: ::PHY_ScalarType btGImpactMeshShapePart_TrimeshPrimitiveManager->indicestype
void* btAABB_new0(); //constructor: btAABB  ( ::btAABB::* )(  ) 
void* btAABB_new1(float* p0,float* p1,float* p2); //constructor: btAABB  ( ::btAABB::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void* btAABB_new2(float* p0,float* p1,float* p2,float p3); //constructor: btAABB  ( ::btAABB::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btScalar ) 
void* btAABB_new3(void* p0,float p1); //constructor: btAABB  ( ::btAABB::* )( ::btAABB const &,::btScalar ) 
void btAABB_free(void *c);
 
int btAABB_overlapping_trans_conservative(void *c,void* p0,float* p1); //method: overlapping_trans_conservative bool ( ::btAABB::* )( ::btAABB const &,::btTransform & ) const
void btAABB_appy_transform(void *c,float* p0); //method: appy_transform void ( ::btAABB::* )( ::btTransform const & ) 
void btAABB_find_intersection(void *c,void* p0,void* p1); //method: find_intersection void ( ::btAABB::* )( ::btAABB const &,::btAABB & ) const
int btAABB_collide_ray(void *c,float* p0,float* p1); //method: collide_ray bool ( ::btAABB::* )( ::btVector3 const &,::btVector3 const & ) const
int btAABB_overlapping_trans_cache(void *c,void* p0,void* p1,int p2); //method: overlapping_trans_cache bool ( ::btAABB::* )( ::btAABB const &,::BT_BOX_BOX_TRANSFORM_CACHE const &,bool ) const
void btAABB_get_center_extend(void *c,float* p0,float* p1); //method: get_center_extend void ( ::btAABB::* )( ::btVector3 &,::btVector3 & ) const