Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_meshInterface_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `BtStridingMeshInterface'  mkBtStridingMeshInterface* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#533>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_scale_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#533>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_scale_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#534>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_part_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#534>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_part_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#535>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_lock_count_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#535>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_m_lock_count_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#537>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_numverts_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#537>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_numverts_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#539>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_stride_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#539>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_stride_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#541>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_indexstride_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#541>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_indexstride_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#542>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_numfaces_set    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#542>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactMeshShapePart_TrimeshPrimitiveManager_numfaces_get    `( BtGImpactMeshShapePart_TrimeshPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btAABB
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#237>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_new0 as btAABB0    {  } -> `BtAABB' mkBtAABB* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#243>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_new1 as btAABB1    {  withVec3* `Vec3' , withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtAABB' mkBtAABB* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#257>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_new2 as btAABB2    {  withVec3* `Vec3' , withVec3* `Vec3' , withVec3* `Vec3' ,  `Float'  } -> `BtAABB' mkBtAABB* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#280>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_new3 as btAABB3    `( BtAABBClass p0 )' =>     {  withBt* `p0' ,  `Float'  } -> `BtAABB' mkBtAABB* #}
{#fun btAABB_free    `( BtAABBClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#507>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_overlapping_trans_conservative as btAABB_overlapping_trans_conservative    `( BtAABBClass bc , BtAABBClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, withTransform* `Transform'  peekTransform* -- ^ trans1_to_0
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#507>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_overlapping_trans_conservative as btAABB_overlapping_trans_conservative'    `( BtAABBClass bc , BtAABBClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, allocaTransform-  `Transform'  peekTransform* -- ^ trans1_to_0
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#360>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_appy_transform as btAABB_appy_transform    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#360>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_appy_transform as btAABB_appy_transform'    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#425>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_find_intersection as btAABB_find_intersection    `( BtAABBClass bc , BtAABBClass p0 , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ other
, withBt* `p1'  -- ^ intersection
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#456>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_collide_ray as btAABB_collide_ray    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ vorigin
, withVec3* `Vec3'  peekVec3* -- ^ vdir
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#456>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_collide_ray as btAABB_collide_ray'    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ vorigin
, allocaVec3-  `Vec3'  peekVec3* -- ^ vdir
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#524>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_overlapping_trans_cache as btAABB_overlapping_trans_cache    `( BtAABBClass bc , BtAABBClass p0 , BT_BOX_BOX_TRANSFORM_CACHEClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, withBt* `p1'  -- ^ transcache
,  `Bool'  -- ^ fulltest
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#418>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_get_center_extend as btAABB_get_center_extend    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ center
, withVec3* `Vec3'  peekVec3* -- ^ extend
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#418>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_get_center_extend as btAABB_get_center_extend'    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ center
, allocaVec3-  `Vec3'  peekVec3* -- ^ extend
 } ->  `()'   #}
